# pilot-link

./: COPYING.LIB  ChangeLog  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  pilot-link-pp.pc.in  pilot-link.m4  pilot-link.m4.in  pilot-link.pc.in
bindings/: Makefile.am  Makefile.in  README
bindings/Java/: Makefile  Makefile.am  Makefile.in  MidiMgr.java  README  README.de  TODO  TestTodos.java  adrtest.java  build.xml  datebooktst.java  libjpisock.c  libjpisock.h  test.java
bindings/Java/org/gnu/pilotlink/: AddressAppInfo.java  AddressRecord.java  AppInfo.java  DBInfo.java  DatabaseExistsException.java  DatabaseNotFoundException.java  DatebookAppInfo.java  DatebookRecord.java  FTB3CostCatRecord.java  FTB3TripRecord.java  FTB3VehicleRecord.java  MemoRecord.java  MidiRecord.java  PilotLink.java  PilotLinkException.java  RawAppInfo.java  RawRecord.java  Record.java  SysInfo.java  ToDoRecord.java  User.java  Version.java
bindings/Perl/: .cvsignore  MANIFEST  Makefile  Makefile.PL  Makefile.PL.in  Pilot.c  Pilot.xs  Pilot.xs.orig  README  const-c.inc  const-xs.inc  h2xs-pilot-link  test.pl  typemap
bindings/Perl/blib/lib/PDA/: Pilot.pm  dump.pl
bindings/Perl/blib/lib/auto/PDA/Pilot/: autosplit.ix
bindings/Perl/blib/man3/: PDA::Pilot.3pm
bindings/Python/: .cvsignore  README  TODO  setup-standalone.py  setup-standalone.py.in  setup.py  setup.py.in
bindings/Python/src/: general-maps.i  helperfuncs.i  pi-dlp-maps.i  pi-error.i  pi-file-maps.i  pi-socket-maps.i  pisock.i  pisock.py  pisock_wrap.c  pisockextras.py
bindings/Python/test/: pisocktests.py  run.sh
bindings/Tcl/: Makefile.am  Makefile.in  README  pitcl.c  tclAppInit.c
darwin/: Makefile.am  Makefile.in  build_framework.sh
doc/: 60-libpisock.rules  CodingGuidelines  Makefile.am  Makefile.in  README  README.debugging  README.libusb  README.usb  TODO  doxygen.cfg.in
doc/man/: Makefile.am  Makefile.in  README  ietf2datebook.1  pilot-addresses.1  pilot-clip.1  pilot-csd.1  pilot-debugsh.1  pilot-dedupe.1  pilot-dlpsh.1  pilot-file.1  pilot-foto-treo600.1  pilot-foto-treo650.1  pilot-foto.1  pilot-getram.1  pilot-getrom.1  pilot-getromtoken.1  pilot-hinotes.1  pilot-install-datebook.1  pilot-install-expenses.1  pilot-install-hinote.1  pilot-install-memo.1  pilot-install-netsync.1  pilot-install-todo.1  pilot-install-todos.1  pilot-install-user.1  pilot-link.7  pilot-memos.1  pilot-nredir.1  pilot-read-expenses.1  pilot-read-ical.1  pilot-read-notepad.1  pilot-read-palmpix.1  pilot-read-screenshot.1  pilot-read-todos.1  pilot-read-veo.1  pilot-reminders.1  pilot-schlep.1  pilot-wav.1  pilot-xfer.1
doc/xml/: Makefile.am  Makefile.in  README  catalog.xml.in  docbook.xsl  docbook.xsl.in  pilot-link.docbook
include/: Makefile.am  Makefile.in  pi-debug.h  pi-dlp.h  pi-file.h  pi-macros.h  pi-md5.h  pi-md5.h.in  pi-serial.h  pi-socket.h  pi-source.h  pi-syspkt.h  pi-threadsafe.h  pi-userland.h  pi-version.h.in
libpisock/: Makefile.am  Makefile.in  address.c  blob.c  bluetooth.c  calendar.c  cmp.c  contact.c  darwinusb.c  debug.c  dlp.c  freebsdusb.c  hinote.c  inet.c  libusb.c  linuxusb.c  location.c  md5.c  memo.c  notepad.c  padp.c  palmpix.c  pi-file.c  serial.c  slp.c  socket.c  sys.c  syspkt.c  threadsafe.c  todo.c  usb.c  utils.c  veo.c  versamail.c
libpisync/: Makefile.am  Makefile.in  sync.c  util.c
m4/: bluez.m4  python.m4  socklen.m4  tcl.m4  threads.m4
popt/: Makefile.am  Makefile.in  popt.c
src/: Makefile.am  Makefile.in  ccexample.cc  kittykiller.c  parsedate.c  parsedate.y  pd-tty.c  pilot-addresses.c  pilot-clip.c  pilot-csd.c  pilot-debug.c  pilot-debugsh.c  pilot-dedupe.c  pilot-dlpsh.c  pilot-file.c  pilot-foto-treo600.c  pilot-foto-treo650.c  pilot-foto.c  pilot-getram.c  pilot-getrom.c  pilot-getromtoken.c  pilot-hinotes.c  pilot-ietf2datebook.pl  pilot-install-datebook.c  pilot-install-expenses  pilot-install-expenses.c  pilot-install-hinote.c  pilot-install-memo.c  pilot-install-netsync.c  pilot-install-todo.c  pilot-install-todos.c  pilot-install-user.c  pilot-memos.c  pilot-nredir.c  pilot-port.c  pilot-read-expenses.c  pilot-read-ical.c  pilot-read-notepad.c  pilot-read-palmpix.c  pilot-read-screenshot.c  (+11 more)
src/pix/: Makefile.am  Makefile.in  case.xbm  casemask.xbm
src/prc/: Makefile.am  Makefile.in  getrom.prc  getrom2.prc
tests/: Makefile.am  Makefile.in  calendardb-test.c  contactsdb-test.c  dlp-test.c  locationdb-test.c  packers.c  versamail-test.c  vfs-test.c
