man_MANS =				\
	ietf2datebook.1			\
	pilot-addresses.1		\
	pilot-clip.1			\
	pilot-csd.1			\
	pilot-debugsh.1			\
	pilot-dedupe.1			\
	pilot-dlpsh.1			\
	pilot-file.1			\
	pilot-foto.1			\
	pilot-getram.1			\
	pilot-getrom.1			\
	pilot-getromtoken.1		\
	pilot-hinotes.1			\
	pilot-install-datebook.1	\
	pilot-install-expenses.1	\
	pilot-install-hinote.1		\
	pilot-install-memo.1		\
	pilot-install-netsync.1		\
	pilot-install-todo.1		\
	pilot-install-todos.1		\
	pilot-install-user.1		\
	pilot-link.7			\
	pilot-memos.1			\
	pilot-nredir.1			\
	pilot-read-expenses.1		\
	pilot-read-ical.1		\
	pilot-read-notepad.1		\
	pilot-read-palmpix.1		\
	pilot-read-screenshot.1		\
	pilot-read-todos.1		\
	pilot-read-veo.1		\
	pilot-reminders.1		\
	pilot-schlep.1			\
	pilot-foto-treo600.1		\
	pilot-foto-treo650.1		\
	pilot-wav.1			\
	pilot-xfer.1

EXTRA_DIST=$(man_MANS)
